connection related ops and tests